# quantstats

./: pyproject.toml
quantstats/: __init__.py
quantstats/_plotting/: core.py
src/quantstats/: download.py  reports.py  stats.py  utils.py
src/quantstats/_plotting/: core.py  wrappers.py
tests/: conftest.py  test_metrics.py
tests/__data__/: meta.csv
